--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,25 @@
       <version>9.10</version>
     </dependency>
 
-  </dependencies>
+
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcpkix-jdk15on</artifactId>
+        <version>1.69</version>
+      </dependency>
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>1.69</version>
+      </dependency>
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-ext-jdk15on</artifactId>
+        <version>1.69</version>
+      </dependency>
+    </dependencies>
+
+
+
 
 </project>
